[gd_scene load_steps=8 format=2]

[ext_resource path="res://script/car.gd" type="Script" id=1]
[ext_resource path="res://font/DejaVuSans.ttf" type="DynamicFontData" id=2]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/cars.png-36c4d12441ace5b4041b0840d5a48616.stex"

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.472868, 1 )
colors = PoolColorArray( 0.211765, 0.211765, 0.211765, 1, 0.519531, 0.519531, 0.519531, 1, 0.211765, 0.211765, 0.211765, 1 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0.986364 ), 0.0, -0.310151, 0, 0, Vector2( 1, 0.00137544 ), 0.288416, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.573643 )

[node name="car" type="KinematicBody2D" groups=[
"car",
]]
collision_layer = 8
collision_mask = 2147483663
collision/safe_margin = 6.0
script = ExtResource( 1 )

[node name="col" type="CollisionPolygon2D" parent="."]
scale = Vector2( 0.2, 0.2 )
polygon = PoolVector2Array( -320, -120, 320, -120, 320, 120, -320, 120 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = SubResource( 1 )
hframes = 2
vframes = 8

[node name="detect_limit_left" type="RayCast2D" parent="."]
position = Vector2( 64, -24 )
scale = Vector2( 0.2, 0.2 )
enabled = true
cast_to = Vector2( 500, 0 )
collision_mask = 3
collide_with_areas = true

[node name="detect_limit_rigth" type="RayCast2D" parent="."]
position = Vector2( 64, 24 )
scale = Vector2( 0.2, 0.2 )
enabled = true
cast_to = Vector2( 500, 0 )
collision_mask = 5
collide_with_areas = true

[node name="detect_car_left" type="RayCast2D" parent="."]
position = Vector2( 64, -16 )
scale = Vector2( 0.2, 0.2 )
enabled = true
cast_to = Vector2( 500, 0 )
collision_mask = 11

[node name="detect_car_right" type="RayCast2D" parent="."]
position = Vector2( 64, 16 )
scale = Vector2( 0.2, 0.2 )
enabled = true
cast_to = Vector2( 500, 0 )
collision_mask = 13

[node name="detect_turn_left" type="RayCast2D" parent="."]
position = Vector2( 32, -24 )
scale = Vector2( 0.2, 0.2 )
enabled = true
cast_to = Vector2( 500, -500 )
collision_mask = 15
collide_with_areas = true

[node name="detect_turn_rigth" type="RayCast2D" parent="."]
position = Vector2( 32, 24 )
scale = Vector2( 0.2, 0.2 )
enabled = true
cast_to = Vector2( 500, 500 )
collision_mask = 15
collide_with_areas = true

[node name="detect_crash" type="RayCast2D" parent="."]
position = Vector2( 40, 0 )
scale = Vector2( 0.2, 0.2 )
enabled = true
cast_to = Vector2( 500, 0 )
collision_mask = 8
collide_with_areas = true

[node name="camera" type="Camera2D" parent="."]

[node name="number" type="Label" parent="."]
margin_left = 24.0
margin_top = 6.0
margin_right = 74.0
margin_bottom = 54.0
rect_rotation = -90.0
rect_scale = Vector2( 0.2, 0.2 )
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 2 )
text = "99"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="helmet" type="Polygon2D" parent="."]
polygon = PoolVector2Array( -3, -4, -6, -3, -7, 0, -7, 1, -6, 4, -3, 5, 0, 4, 1, 1, 1, 0, 0, -3 )

[node name="wheel" type="CPUParticles2D" parent="."]
position = Vector2( -41, -21 )
amount = 128
lifetime = 0.55
emission_shape = 2
emission_rect_extents = Vector2( 1, 5 )
gravity = Vector2( -98, 0 )
scale_amount = 0.5
color_ramp = SubResource( 5 )

[node name="wheel2" type="CPUParticles2D" parent="."]
position = Vector2( 42, 20 )
amount = 128
lifetime = 0.55
emission_shape = 2
emission_rect_extents = Vector2( 1, 5 )
gravity = Vector2( -98, 0 )
scale_amount = 0.5
color_ramp = SubResource( 5 )

[node name="wheel3" type="CPUParticles2D" parent="."]
position = Vector2( 41, -20 )
amount = 128
lifetime = 0.55
emission_shape = 2
emission_rect_extents = Vector2( 1, 5 )
gravity = Vector2( -98, 0 )
scale_amount = 0.5
color_ramp = SubResource( 5 )

[node name="wheel4" type="CPUParticles2D" parent="."]
position = Vector2( -42, 21 )
amount = 128
lifetime = 0.55
emission_shape = 2
emission_rect_extents = Vector2( 1, 5 )
gravity = Vector2( -98, 0 )
scale_amount = 0.5
color_ramp = SubResource( 5 )

[node name="vortex" type="CPUParticles2D" parent="."]
position = Vector2( -61, 0 )
amount = 32
emission_shape = 3
emission_points = PoolVector2Array( -2, -14, -2, 15 )
emission_colors = PoolColorArray(  )
gravity = Vector2( -98, 0 )
scale_amount = 3.0
scale_amount_curve = SubResource( 4 )
color_ramp = SubResource( 3 )
